Зміни до стилів

--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,8 @@
 
         <!--ПРИКЛАДИ ПРОЄКТІВ-->
         <ul class="projects list">
-          <li class="item">
-            <a href="" class="list"
+          <li class="item projects-link">
+            <a href="#" class="list"
               ><img
                 src="./images/example1.jpg"
                 alt="--Приклад веб-сайту"
@@ -90,7 +90,7 @@
               </div>
             </a>
           </li>
-          <li class="item">
+          <li class="item projects-link">
             <a href="" class="list"
               ><img
                 src="./images/example2.jpg"
